fixed: 修改实例化方式